# LittleRedEngine

./: .gitignore  CMakeLists.txt  README.md  build.bat  compile_shaders.bat  main.c  run.bat  test.cpp
dep/lreutils/: CMakeLists.txt
dep/lreutils/array/: array.h  arrayold.h
dep/lreutils/bst/: bst.c  bst.h
dep/lreutils/hashtable/: hashset.h  hashsetold.h  hashtable.h  hashtableold2.h  hashtableold3.h  hashutils.c
dep/lreutils/logging/: CMakeLists.txt  logging.c  logging.h
dep/lreutils/memory/: memlog.c  memlog.h
dep/lreutils/rbtree/: rbtree.c
dep/lreutils/stack/: stack.h
dep/lreutils_b/: CMakeLists.txt
dep/lreutils_b/bst/: CMakeLists.txt  bst_test.c
dep/lreutils_b/hashtable/: CMakeLists.txt  hashfunctions.h  hashset.h  hashtable.h  hashtableo.h  hashutils.c
dep/lreutils_b/memory/: CMakeLists.txt  memlog.c
dep/lreutils_b/rbtree/: CMakeLists.txt  rbtree.h
lre/: CMakeLists.txt  lre_buffer.c  lre_buffer.h  lre_camera3d.h  lre_device.c  lre_device.h  lre_helper.h  lre_instance.c  lre_instance.h  lre_main.c  lre_main.h  lre_object.h  lre_objmodelloader.h  lre_pipeline.c  lre_pipeline.h  lre_render.c  lre_render.h  lre_swapchain.c  lre_swapchain.h  lre_types.h  lre_vertex.h  lre_window.c  lre_window.h  pch.h
res/shaders/: simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv
